<resources>
    <string name="app_name">CarCheck</string>
    <string name="choose_photo_button">Choose Photo</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="already_registered_link">Already registered?</string>
    <string name="login_button">Login</string>
    <string name="not_registered_yet_link">Not registered yet?</string>
    <string name="create_group">Create group</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="plate">Plate</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="users">Users</string>
    <string name="add_user">Add user</string>
    <string name="admin_info">Any user in your group can be an administrator. Being an administrator allows you to add or remove vehicles and users from the group. It also means you can change the role of other users and modify vehicles’ data. However, only the creator of a group can delete it. Press save in the top-right corner to save role changes.</string>
    <string name="administrator_role">Administrator role</string>
    <string name="remove_user_from_group">Remove user from group</string>
    <string name="delete_user_info">Removing a user from your group will not delete any of the data modified by them. You can always re-add the user to the group whenever you want. You can remove any user (except for the creator of the group and yourself) this way which will have the same effect as leaving the group from one’s groups page.</string>
    <string name="save_changes">Save changes</string>
    <string name="leave_group">Leave group</string>
    <string name="expiry_name">Expiry name</string>
    <string name="logout">Logout</string>
    <string name="update_position">Update position</string>
    <string name="expense_name">Expense name</string>
    <string name="expense_value">Expense value</string>
    <string name="notes">Notes...</string>

    <string-array name="car_type">
        <item>Car</item>
        <item>Motorcycle</item>
        <item>Truck</item>
        <item>Caravan</item>
        <item>Bus</item>
    </string-array>

    <string-array name="vehicle_status">
        <item>Free</item>
        <item>In use</item>
        <item>Out of order</item>
        <item>Under repair</item>
    </string-array>
</resources>