<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vehiclemanagement.VehicleDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="24dp">

        <Spinner
            android:id="@+id/typeSpinnerVehicleData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:entries="@array/car_type"
            app:layout_constraintStart_toStartOf="@+id/makeEditTextVehicleData"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/typeTextViewVehicleData"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:textColor="@drawable/edit_text_selector"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/makeEditTextVehicleData"
            app:layout_constraintStart_toStartOf="@+id/makeEditTextVehicleData"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/makeEditTextVehicleData"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/make"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textColor="@drawable/edit_text_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/modelEditTextVehicleData"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:hint="@string/model"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textColor="@drawable/edit_text_selector"
            app:layout_constraintEnd_toEndOf="@+id/makeEditTextVehicleData"
            app:layout_constraintStart_toStartOf="@+id/makeEditTextVehicleData"
            app:layout_constraintTop_toBottomOf="@+id/makeEditTextVehicleData" />

        <EditText
            android:id="@+id/plateEditTextVehicleData"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:hint="@string/plate"
            android:inputType="textCapCharacters"
            android:paddingLeft="10dp"
            android:textColor="@drawable/edit_text_selector"
            app:layout_constraintEnd_toEndOf="@+id/modelEditTextVehicleData"
            app:layout_constraintStart_toStartOf="@+id/modelEditTextVehicleData"
            app:layout_constraintTop_toBottomOf="@+id/modelEditTextVehicleData" />

        <EditText
            android:id="@+id/seatsEditTextVehicleData"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:hint="@string/number_of_seats"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textColor="@drawable/edit_text_selector"
            app:layout_constraintEnd_toEndOf="@+id/plateEditTextVehicleData"
            app:layout_constraintStart_toStartOf="@+id/plateEditTextVehicleData"
            app:layout_constraintTop_toBottomOf="@+id/plateEditTextVehicleData" />

        <android.widget.Button
            android:id="@+id/editButtonVehicleData"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:enabled="false"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/deleteButtonVehicleData"
            app:layout_constraintStart_toStartOf="@+id/seatsEditTextVehicleData"
            app:layout_constraintTop_toBottomOf="@+id/seatsEditTextVehicleData" />

        <android.widget.Button
            android:id="@+id/deleteButtonVehicleData"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_button"
            android:enabled="false"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/editButtonVehicleData"
            app:layout_constraintEnd_toEndOf="@+id/seatsEditTextVehicleData"
            app:layout_constraintTop_toBottomOf="@+id/seatsEditTextVehicleData" />

        <android.widget.Button
            android:id="@+id/cancelButtonVehicleData"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:enabled="false"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/saveButtonVehicleData"
            app:layout_constraintStart_toStartOf="@+id/seatsEditTextVehicleData"
            app:layout_constraintTop_toBottomOf="@+id/seatsEditTextVehicleData" />

        <android.widget.Button
            android:id="@+id/saveButtonVehicleData"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_button"
            android:enabled="false"
            android:text="@string/save"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/cancelButtonVehicleData"
            app:layout_constraintEnd_toEndOf="@+id/seatsEditTextVehicleData"
            app:layout_constraintTop_toBottomOf="@+id/seatsEditTextVehicleData" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>