<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrationlogin.RegistrationActivity"
    android:background="@color/app_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/usernameEditTextRegistration"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choosePhotoButtonRegistration" />

        <EditText
            android:id="@+id/emailEditTextRegistration"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:hint="@string/email_hint"
            android:paddingLeft="16dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/usernameEditTextRegistration"
            app:layout_constraintStart_toStartOf="@+id/usernameEditTextRegistration"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditTextRegistration" />

        <EditText
            android:id="@+id/passwordEditTextRegistration"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:paddingLeft="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/emailEditTextRegistration"
            app:layout_constraintStart_toStartOf="@+id/emailEditTextRegistration"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTextRegistration" />

        <android.widget.Button
            android:id="@+id/registerButtonRegistration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditTextRegistration"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTextRegistration"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegistration" />

        <TextView
            android:id="@+id/alreadyRegisteredTextViewRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/already_registered_link"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/registerButtonRegistration"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/registerButtonRegistration"
            app:layout_constraintTop_toBottomOf="@+id/registerButtonRegistration" />

        <android.widget.Button
            android:id="@+id/choosePhotoButtonRegistration"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/rounded_select_photo"
            android:foreground="@drawable/default_profile_picture"
            android:text="@string/choose_photo_button"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/choosePhotoImageViewRegistration"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="@+id/choosePhotoButtonRegistration"
            app:layout_constraintEnd_toEndOf="@+id/choosePhotoButtonRegistration"
            app:layout_constraintStart_toStartOf="@+id/choosePhotoButtonRegistration"
            app:layout_constraintTop_toTopOf="@+id/choosePhotoButtonRegistration">

        </de.hdodenhof.circleimageview.CircleImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>