<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usermanagement.UserActivity">

    <TextView
        android:id="@+id/adminInfoTextViewUserActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:justificationMode="inter_word"
        android:textColor="@color/black"
        android:text="@string/admin_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/adminSwitchUserActivity"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/administrator_role"
        android:textSize="18sp"
        android:theme="@style/Theme.CarCheck"
        app:layout_constraintEnd_toEndOf="@+id/adminInfoTextViewUserActivity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/adminInfoTextViewUserActivity"
        app:layout_constraintTop_toBottomOf="@+id/adminInfoTextViewUserActivity" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="36dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminSwitchUserActivity" />

    <TextView
        android:id="@+id/deleteUserInfoTextViewUserActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:justificationMode="inter_word"
        android:text="@string/delete_user_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/adminSwitchUserActivity"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/adminSwitchUserActivity"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/deleteUserTextViewUserActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/remove_user_from_group"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/deleteUserInfoTextViewUserActivity"
        app:layout_constraintTop_toBottomOf="@+id/deleteUserInfoTextViewUserActivity" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="63dp"
        android:layout_height="52dp"
        android:layout_marginTop="22dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/deleteUserInfoTextViewUserActivity"
        app:layout_constraintTop_toBottomOf="@+id/deleteUserInfoTextViewUserActivity"
        app:srcCompat="@drawable/delete" />

</androidx.constraintlayout.widget.ConstraintLayout>