<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vehiclemanagement.VehicleExpenseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="24dp">

        <EditText
            android:id="@+id/expenseNameEditTextVehicleExpense"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:maxLength="32"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:hint="@string/expense_name"
            android:inputType="textCapSentences"
            android:paddingLeft="10dp"
            android:textColor="@drawable/edit_text_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/expenseValueEditTextVehicleExpense"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:hint="@string/expense_value"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:maxLength="12"
            android:paddingLeft="10dp"
            android:textColor="@drawable/edit_text_selector"
            app:layout_constraintEnd_toEndOf="@+id/expenseNameEditTextVehicleExpense"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/expenseNameEditTextVehicleExpense"
            app:layout_constraintTop_toBottomOf="@+id/expenseNameEditTextVehicleExpense" />

        <EditText
            android:id="@+id/expenseNotesEditTextVehicleExpense"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:hint="@string/notes"
            android:inputType="textCapSentences"
            android:maxLength="1024"
            android:paddingLeft="10dp"
            android:textColor="@drawable/edit_text_selector"
            app:layout_constraintEnd_toEndOf="@+id/expenseNameEditTextVehicleExpense"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/expenseNameEditTextVehicleExpense"
            app:layout_constraintTop_toBottomOf="@+id/expenseValueEditTextVehicleExpense" />

        <CalendarView
            android:id="@+id/expenseDateCalendarViewVehicleExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/expenseNameEditTextVehicleExpense"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="@+id/expenseNameEditTextVehicleExpense"
            app:layout_constraintTop_toBottomOf="@+id/expenseNotesEditTextVehicleExpense" />

        <android.widget.Button
            android:id="@+id/deleteButtonVehicleExpense"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/saveButtonVehicleExpense"
            app:layout_constraintStart_toStartOf="@+id/expenseDateCalendarViewVehicleExpense"
            app:layout_constraintTop_toBottomOf="@+id/expenseDateCalendarViewVehicleExpense" />

        <android.widget.Button
            android:id="@+id/saveButtonVehicleExpense"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/expenseDateCalendarViewVehicleExpense"
            app:layout_constraintStart_toEndOf="@+id/deleteButtonVehicleExpense"
            app:layout_constraintTop_toTopOf="@+id/deleteButtonVehicleExpense" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>