<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vehiclemanagement.VehicleExpiryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="24dp">

        <EditText
            android:id="@+id/expiryNameEditTextVehicleExpiry"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_edittext_registration"
            android:ems="10"
            android:hint="@string/expiry_name"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textColor="@drawable/edit_text_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CalendarView
            android:id="@+id/expiryDateCalendarViewVehicleExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/expiryNameEditTextVehicleExpiry"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="@+id/expiryNameEditTextVehicleExpiry"
            app:layout_constraintTop_toBottomOf="@+id/expiryNameEditTextVehicleExpiry" />

        <android.widget.Button
            android:id="@+id/deleteButtonVehicleExpiry"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/saveButtonVehicleExpiry"
            app:layout_constraintStart_toStartOf="@+id/expiryDateCalendarViewVehicleExpiry"
            app:layout_constraintTop_toBottomOf="@+id/expiryDateCalendarViewVehicleExpiry" />

        <android.widget.Button
            android:id="@+id/saveButtonVehicleExpiry"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/expiryDateCalendarViewVehicleExpiry"
            app:layout_constraintStart_toEndOf="@+id/deleteButtonVehicleExpiry"
            app:layout_constraintTop_toTopOf="@+id/deleteButtonVehicleExpiry" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>